fixes button text wrapping for long call numbers on touch devices

--- a/app/assets/stylesheets/dul_argon/search-results.scss
+++ b/app/assets/stylesheets/dul_argon/search-results.scss
@@ -151,6 +151,7 @@
   border-radius: 5px;
   padding: 0 8px 4px 3px;
   margin-left: .2em;
+  white-space: nowrap;
 
   &::after {
     content: 'where to find it';
